--- a/src/componnents/Users/Users.module.css
+++ b/src/componnents/Users/Users.module.css
@@ -3,3 +3,14 @@
     height: 100px;
     border-radius: 100%;
 }
+.selectedPage{
+    font-weight: bold;
+}
+.pagination{
+    display: flex;
+}
+.paginationItem{
+    padding: 5px 10px;
+    border: black 1px solid;
+    cursor: pointer;
+}
