--- a/src/componnents/Header/Header.module.css
+++ b/src/componnents/Header/Header.module.css
@@ -1,8 +1,15 @@
 .header {
     grid-area: h;
     background-color: green;
+    display: flex;
+    justify-content: space-between;
 }
 
 .header img {
     width: 50px;
+    height: 50px;
+    display: block;
+}
+.loginBlock a{
+    color: white;
 }
